--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - mysql_data:/var/lib/mysql
 
   worker:
-    image: zhenghaoz/gorse-worker
+    image: zhenghaoz/gorse-worker:nightly
     restart: unless-stopped
     ports:
       - 8089:8089
@@ -36,7 +36,7 @@ services:
       - master
 
   server:
-    image: zhenghaoz/gorse-server
+    image: zhenghaoz/gorse-server:nightly
     restart: unless-stopped
     ports:
       - 8087:8087
@@ -55,11 +55,14 @@ services:
       - master
 
   master:
-    image: zhenghaoz/gorse-master
+    image: zhenghaoz/gorse-master:nightly
     restart: unless-stopped
     ports:
       - 8086:8086
       - 8088:8088
+    environment:
+      GORSE_CACHE_STORE: redis://redis:6379
+      GORSE_DATA_STORE: mysql://gorse:gorse_pass@tcp(mysql:3306)/gorse?parseTime=true
     command: >
       -c /etc/gorse/config.toml 
       --log-path /var/log/gorse/master.log 
