fix wrong metrics

--- a/docker/config.toml
+++ b/docker/config.toml
@@ -41,10 +41,16 @@ auto_insert_user = true
 # Insert new items while inserting feedback. The default value is true.
 auto_insert_item = false
 
+# Server-side cache expire time. The default value is 10s.
+cache_expire = "10s"
+
 [recommend]
 
 # The cache size for recommended/popular/latest items. The default value is 10.
 cache_size = 100
+
+# Recommended cache expire time. The default value is 72h.
+cache_expire = "72h"
 
 [recommend.data_source]
 
