--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -40,9 +40,6 @@ services:
     restart: unless-stopped
     ports:
       - 8087:8087
-    environment:
-      GORSE_CACHE_STORE: redis://redis:6379
-      GORSE_DATA_STORE: mysql://gorse:gorse_pass@tcp(mysql:3306)/gorse?parseTime=true
     command: >
       --master-host master --master-port 8086 
       --http-host 0.0.0.0 --http-port 8087
@@ -62,7 +59,7 @@ services:
       - 8088:8088
     environment:
       GORSE_CACHE_STORE: redis://redis:6379
-      GORSE_DATA_STORE: mysql://gorse:gorse_pass@tcp(mysql:3306)/gorse?parseTime=true
+      GORSE_DATA_STORE: mysql://gorse:gorse_pass@tcp(mysql:3306)/gorse
     command: >
       -c /etc/gorse/config.toml 
       --log-path /var/log/gorse/master.log 
