add ca-certificates.crt to Docker images

--- a/docker/gorse-in-one/Dockerfile
+++ b/docker/gorse-in-one/Dockerfile
@@ -22,6 +22,8 @@ RUN /usr/bin/gorse-in-one --version
 ############################
 FROM scratch
 
+COPY --from=0 /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
+
 COPY --from=0 /usr/bin/gorse-in-one /usr/bin/gorse-in-one
 
 ENV USER root
