--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -21,7 +21,7 @@ jobs:
         
       - name: Build release
         run: >
-          gox -osarch='darwin/arm64 darwin/amd64 windows/amd64 linux/arm64 linux/amd64' -ldflags="
+          gox -osarch='darwin/arm64 darwin/amd64 windows/arm64 windows/amd64 linux/arm64 linux/amd64' -ldflags="
             -X 'github.com/zhenghaoz/gorse/cmd/version.Version=$(git describe --tags $(git rev-parse HEAD))'
             -X 'github.com/zhenghaoz/gorse/cmd/version.GitCommit=$(git rev-parse HEAD)'
             -X 'github.com/zhenghaoz/gorse/cmd/version.BuildTime=$(date)'" ./...
@@ -34,6 +34,7 @@ jobs:
           zip gorse_linux_amd64.zip gorse-*_linux_amd64
           zip gorse_linux_arm64.zip gorse-*_linux_arm64
           zip gorse_windows_amd64.zip gorse-*_windows_amd64.exe
+          zip gorse_windows_arm64.zip gorse-*_windows_arm64.exe
           zip gorse_darwin_amd64.zip gorse-*_darwin_amd64
           zip gorse_darwin_arm64.zip gorse-*_darwin_arm64
           
