--- a/config/config.toml.template
+++ b/config/config.toml.template
@@ -15,6 +15,9 @@ cache_store = "redis://localhost:6379/0"
 #   mongodb+srv://[username:password@]host1[:port1][,...hostN[:portN]][/[defaultauthdb][?options]]
 data_store = "mysql://gorse:gorse_pass@tcp(localhost:3306)/gorse"
 
+# The naming prefix for tables (collections, keys) in databases.
+table_prefix = ""
+
 [master]
 
 # GRPC port of the master node. The default value is 8086.
