--- a/cmd/gorse-in-one/Dockerfile
+++ b/cmd/gorse-in-one/Dockerfile
@@ -1,21 +1,21 @@
 ############################
 # STEP 1 build executable binary
 ############################
-FROM golang:1.18
+FROM golang:1.19
 
 COPY . gorse
 
 RUN cd gorse && \
     go get -v -t -d ./...
 
-RUN cd gorse/cmd/gorse-master && \
+RUN cd gorse/cmd/gorse-in-one && \
     CGO_ENABLED=0 go build -ldflags=" \
        -X 'github.com/zhenghaoz/gorse/cmd/version.Version=$(git describe --tags $(git rev-parse HEAD))' \
        -X 'github.com/zhenghaoz/gorse/cmd/version.GitCommit=$(git rev-parse HEAD)' \
        -X 'github.com/zhenghaoz/gorse/cmd/version.BuildTime=$(date)'" . && \
-    mv gorse-master /usr/bin
+    mv gorse-in-one /usr/bin
 
-RUN /usr/bin/gorse-master --version
+RUN /usr/bin/gorse-in-one --version
 
 ############################
 # STEP 2 build a small image
@@ -24,8 +24,8 @@ FROM scratch
 
 COPY --from=0 /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 
-COPY --from=0 /usr/bin/gorse-master /usr/bin/gorse-master
+COPY --from=0 /usr/bin/gorse-in-one /usr/bin/gorse-in-one
 
 ENV USER root
 
-ENTRYPOINT ["/usr/bin/gorse-master", "-c", "/etc/gorse/config.toml"]
+ENTRYPOINT ["/usr/bin/gorse-in-one", "-c", "/etc/gorse/config.toml"]
