remove docker folder

--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -76,7 +76,7 @@ jobs:
         with:
           context: .
           platforms: linux/amd64,linux/arm64
-          file: docker/${{ matrix.image }}/Dockerfile
+          file: cmd/${{ matrix.image }}/Dockerfile
           push: true
           tags: |
             zhenghaoz/${{ matrix.image }}:latest
