--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -9,15 +9,16 @@ jobs:
     name: build binaries
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Go 1.19.x
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.19.x
-        id: go
-        
       - name: Pull source
         uses: actions/checkout@v1
-        
+
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version-file: go.mod
+          check-latest: true
+          cache: true
+
       - name: Install gox
         run: go install github.com/mitchellh/gox@latest
         
