--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -17,19 +17,21 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
 
       - name: Login to DockerHub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build docker image
-        uses: docker/build-push-action@v2.6.1
+        uses: docker/build-push-action@v3
         with:
           context: .
           platforms: linux/amd64,linux/arm64
           file: cmd/${{ matrix.image }}/Dockerfile
           push: true
           tags: zhenghaoz/${{ matrix.image }}:nightly
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
