--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -61,10 +61,10 @@ jobs:
         uses: actions/checkout@v1
         
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
         
       - name: Login to DockerHub
-        uses: docker/login-action@v1 
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -73,7 +73,7 @@ jobs:
         uses: battila7/get-version-action@v2
 
       - name: Build docker image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           context: .
           platforms: linux/amd64,linux/arm64
@@ -83,3 +83,5 @@ jobs:
             zhenghaoz/${{ matrix.image }}:latest
             zhenghaoz/${{ matrix.image }}:${{ steps.get_version.outputs.major }}.${{ steps.get_version.outputs.minor }}
             zhenghaoz/${{ matrix.image }}:${{ steps.get_version.outputs.version-without-v }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
