--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v1
         
       - name: Install gox
-        run: go install github.com/mitchellh/gox@latest
+        run: go install github.com/mitchellh/gox@master
         
       - name: Build release
         run: >
