add CORS to rest server and config

--- a/config/config.toml.template
+++ b/config/config.toml.template
@@ -37,6 +37,13 @@ http_port = 8088
 # HTTP host of the master node. The default values is "0.0.0.0".
 http_host = "0.0.0.0"
 
+# AllowedDomainFunc is optional and is a function that will do the check
+# when the origin is not part of the AllowedDomains and it does not contain the wildcard ".*".
+http_cors_domains = []
+
+# AllowedMethods is either empty or has a list of http methods names. Checking is case-insensitive.
+http_cors_methods = []
+
 # Number of working jobs in the master node. The default value is 1.
 n_jobs = 1
 
