--- a/client/docker-compose.yml
+++ b/client/docker-compose.yml
@@ -20,7 +20,9 @@ services:
       - mysql_data:/var/lib/mysql
 
   worker:
-    image: zhenghaoz/gorse-worker
+    build:
+      context: .
+      dockerfile: cmd/gorse-worker/Dockerfile
     restart: unless-stopped
     ports:
       - 8089:8089
@@ -36,7 +38,9 @@ services:
       - master
 
   server:
-    image: zhenghaoz/gorse-server
+    build:
+      context: .
+      dockerfile: cmd/gorse-server/Dockerfile
     restart: unless-stopped
     ports:
       - 8087:8087
@@ -52,7 +56,9 @@ services:
       - master
 
   master:
-    image: zhenghaoz/gorse-master
+    build:
+      context: .
+      dockerfile: cmd/gorse-master/Dockerfile
     restart: unless-stopped
     ports:
       - 8086:8086
