--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -130,8 +130,19 @@ jobs:
   integrate_test:
     name: integrate tests
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        database: [mysql, postgres, mongo]
     steps:
     - uses: actions/checkout@v1
+
+    - uses: cuchi/jinja2-action@v1.2.0
+      with:
+        template: client/docker-compose.yml.j2
+        output_file: client/docker-compose.yml
+        strict: true
+        variables: |
+          database=${{ matrix.database }}
 
     - name: Build the stack
       run: docker-compose -f client/docker-compose.yml --project-directory . up -d
@@ -152,9 +163,11 @@ jobs:
       run: go test -tags='integrate_test' ./client/
 
     - name: Download dataset
+      if: ${{ matrix.database == 'mysql' }}
       run: wget https://cdn.gorse.io/example/github.sql
 
     - name: Import dataset
+      if: ${{ matrix.database == 'mysql' }}
       run: mysql -h 127.0.0.1 -u gorse -pgorse_pass gorse < github.sql
 
   compat_test:
