--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,39 @@ services:
     volumes:
       - mysql_data:/var/lib/mysql
 
+  # postgres:
+  #   image: postgres:10.0
+  #   ports:
+  #     - 5432:5432
+  #   environment:
+  #     POSTGRES_DB: gorse
+  #     POSTGRES_USER: gorse
+  #     POSTGRES_PASSWORD: gorse_pass
+  #   volumes:
+  #     - postgres_data:/var/lib/postgresql/data
+
+  # mongo:
+  #   image: mongo:4.0
+  #   ports:
+  #     - 27017:27017
+  #   environment:
+  #     MONGO_INITDB_DATABASE: gorse
+  #     MONGO_INITDB_ROOT_USERNAME: root
+  #     MONGO_INITDB_ROOT_PASSWORD: password
+  #   volumes:
+  #     - mongo_data:/data/db
+
+  # clickhouse:
+  #   image: yandex/clickhouse-server:21.10
+  #   ports:
+  #     - 8123:8123
+  #   environment:
+  #     CLICKHOUSE_DB: gorse
+  #     CLICKHOUSE_USER: gorse
+  #     CLICKHOUSE_PASSWORD: gorse_pass
+  #   volumes:
+  #     - clickhouse_data:/var/lib/clickhouse
+
   worker:
     image: zhenghaoz/gorse-worker
     restart: unless-stopped
@@ -60,6 +93,9 @@ services:
     environment:
       GORSE_CACHE_STORE: redis://redis:6379
       GORSE_DATA_STORE: mysql://gorse:gorse_pass@tcp(mysql:3306)/gorse
+      # GORSE_DATA_STORE: postgres://gorse:gorse_pass@postgres/gorse?sslmode=disable
+      # GORSE_DATA_STORE: mongodb://root:password@mongo:27017/gorse?authSource=admin&connect=direct
+      # GORSE_DATA_STORE: clickhouse://gorse:gorse_pass@clickhouse:8123/gorse
     command: >
       -c /etc/gorse/config.toml 
       --log-path /var/log/gorse/master.log 
@@ -71,10 +107,16 @@ services:
     depends_on:
       - redis
       - mysql
+      # - postgres
+      # - mongo
+      # - clickhouse
 
 volumes:
-  mysql_data:
   worker_data:
   server_data:
   master_data:
   gorse_log:
+  mysql_data:
+  # postgres_data:
+  # mongo_data:
+  # clickhouse_data:
