--- a/config/config.toml.template
+++ b/config/config.toml.template
@@ -227,3 +227,20 @@ fallback_recommend = ["item_based", "latest"]
 
 # The number of feedback used in fallback item-based similar recommendation. The default values is 10.
 num_feedback_fallback_item_based = 10
+
+[tracing]
+
+# Enable tracing for REST APIs. The default value is false.
+enable_tracing = false
+
+# The type of tracing exporters should be one of "jaeger", "zipkin", "otlp" and "otlphttp". The default value is "jaeger".
+exporter = "jaeger"
+
+# The endpoint of tracing collector.
+collector_endpoint = "http://localhost:14268/api/traces"
+
+# The type of tracing sampler should be one of "always", "never" and "ratio". The default value is "always".
+sampler = "always"
+
+# The ratio of ratio based sampler. The default value is 1.
+ratio = 1
