--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -33,3 +33,24 @@ jobs:
           file: cmd/${{ matrix.image }}/Dockerfile
           push: true
           tags: zhenghaoz/${{ matrix.image }}:nightly
+
+  windows_images:
+    name: windows images
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        image: [gorse-master, gorse-server, gorse-worker, gorse-in-one]
+    steps:
+      - name: Pull source
+        uses: actions/checkout@v1
+
+      - name: Build docker image
+        run: |
+          docker login -u $env:DOCKERHUB_USERNAME -p $env:DOCKERHUB_TOKEN
+          docker build -f cmd/${{ matrix.image }}/Dockerfile.windows `
+            -t zhenghaoz/${{ matrix.image }}:nightly-windowsservercore .
+          docker image push --all-tags zhenghaoz/${{ matrix.image }}
+          docker logout
+        env:
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
