--- a/config/config.toml
+++ b/config/config.toml
@@ -98,10 +98,10 @@ cache_expire = "72h"
 [recommend.data_source]
 
 # The feedback types for positive events.
-positive_feedback_types = ["star","like"]
+positive_feedback_types = ["like","goesToChallenge","rating4","rating5"]
 
 # The feedback types for read events.
-read_feedback_types = ["read"]
+read_feedback_types = ["read","rating1","rating2","rating3"]
 
 # The time-to-live (days) of positive feedback, 0 means disabled. The default value is 0.
 positive_feedback_ttl = 0
@@ -112,7 +112,7 @@ item_ttl = 0
 [recommend.popular]
 
 # The time window of popular items. The default values is 4320h.
-popular_window = "720h"
+popular_window = "4320"
 
 [recommend.user_neighbors]
 
