--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -50,11 +50,6 @@ jobs:
           --health-timeout 5s
           --health-retries 5
 
-      clickhouse:
-        image: yandex/clickhouse-server:21.10
-        ports:
-          - 8123
-
       redis:
         image: redis:5.0
         ports:
@@ -107,8 +102,6 @@ jobs:
         POSTGRES_URI: postgres://gorse:gorse_pass@localhost:${{ job.services.postgres.ports[5432] }}/
         # MongoDB
         MONGO_URI: mongodb://root:password@localhost:${{ job.services.mongo.ports[27017] }}/
-        # ClickHouse
-        CLICKHOUSE_URI: clickhouse://localhost:${{ job.services.clickhouse.ports[8123] }}/
         # Redis
         REDIS_URI: redis://localhost:${{ job.services.redis.ports[6379] }}/
 
@@ -120,7 +113,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        database: [mysql, postgres, mongo, clickhouse]
+        database: [mysql, postgres, mongo]
     steps:
     - uses: actions/checkout@v1
 
