--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -51,7 +51,7 @@ jobs:
           --health-retries 5
 
       redis:
-        image: redis:5.0
+        image: redis/redis-stack
         ports:
           - 6379
 
