--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 
 jobs:
   unit_test:
+    resource_class: arm.2xlarge
     working_directory: ~/repo
     docker:
       - image: cimg/go:1.20
@@ -53,4 +54,10 @@ jobs:
 workflows:
   test:
     jobs:
-      - unit_test
+      - unit_test:
+          name: unit test (arm)
+          filters:
+            branches:
+              only:
+                - master
+                - /release-.*/
