--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,3 +56,9 @@ workflows:
     jobs:
       - unit_test:
           name: unit test (arm)
+          filters:
+            branches:
+              only:
+                - master
+                - /^release-.*/
+                - /^pull.*/
